--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,6 @@ include_directories(${SDL2_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIRS} ${CGLM_INCLUDE_D
 set(CMAKE_C_STANDARD 99)
 
 add_executable(sdl_test sdl_test.c)
-add_executable(opengl_test opengl_test.c opengl/camera.c opengl/camera.h opengl/file_util.c opengl/file_util.h opengl/shader.c opengl/shader.h models/cube.c models/cube.h opengl/material.h opengl/light.h opengl/gl_ext.h opengl/sdl_ext.h opengl/model.h opengl/model.c opengl/sdl_ext.c opengl/gl_ext.c opengl/scene_object.h opengl/scene_object.c opengl/scene_types.h opengl/scene.h opengl/scene.c opengl/light.c)
+add_executable(opengl_test opengl_test.c opengl/camera.c opengl/camera.h opengl/file_util.c opengl/file_util.h opengl/shader.c opengl/shader.h models/cube.c models/cube.h opengl/material.h opengl/light.h opengl/gl_ext.h opengl/sdl_ext.h opengl/model.h opengl/model.c opengl/sdl_ext.c opengl/gl_ext.c opengl/scene_object.h opengl/scene_object.c opengl/scene_types.h opengl/scene.h opengl/scene.c opengl/light.c opengl/scene_screen.h opengl/scene_screen.c)
 target_link_libraries(sdl_test ${SDL2_LIBRARIES})
 target_link_libraries(opengl_test ${SDL2_LIBRARIES} ${OPENGL_LIBRARIES} ${ASSIMP_LIBRARIES} m cglm)
